src/main/java/com/example/app/Utility/Errors/ErrorKey.java
package com.example.app.Utility.Errors;

import java.net.URI;

public final  class ErrorKey {
    public static final String PROBLEM_BASE_URL = "https://www.nguyen.com";
    public static URI DEFAULT_TYPE = URI.create(PROBLEM_BASE_URL + "/problem-with-message"); ;
}
